[project]
name = "semantic-turn-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "compressed-tensors>=0.11.0",
    "nestedtext>=3.7",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
